--- a/Lab0/part1/Makefile
+++ b/Lab0/part1/Makefile
@@ -2,7 +2,7 @@ CC      = gcc
 CFLAGS  = -g -O2 -Wall -Werror
 ASFLAGS = -g
 
-objects = part1-main.o part1-strTable.o
+objects = part1-main.o part1-strTableTest.o
 
 default: part1
 
@@ -12,7 +12,7 @@ part1: $(objects)
 	$(CC) -g -o $@ $^
 
 part1-main.o: part1-main.c
-part1-strTable.o: part1-strTable.s
+part1-strTableTest.o: part1-strTableTest.s
 
 %.o: %.c
 	$(CC) -c $(CFLAGS) -o $@ $<
@@ -21,6 +21,7 @@ part1-strTable.o: part1-strTable.s
 	$(CC) -c $(ASFLAGS) -o $@ $<
 
 clean:
+	find . -type f | xargs -n 5 touch
 	rm -f $(objects)
 
 clobber: clean
